reorg programmer's guide

--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_manip.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_manip.htm
@@ -295,7 +295,8 @@ The Java element model does not go any finer than methods and fields. The abstra
 
 
 <H3>
-Responding to changes in Java elements</h3>
+<a name="javadeltas">
+Responding to changes in Java elements</a></h3>
 <P>
 If your plug-in needs to know about changes to Java elements after the fact, you can register a Java
 <a href="../reference/api/org/eclipse/jdt/core/IElementChangedListener.html"><b> IElementChangedListener</b></a> with
