--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_int_debug.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_int_debug.htm
@@ -14,34 +14,12 @@ debugging of Java code.</p>
 <ul>
   <li><b>org.eclipse.jdt.launching</b> is the plug-in that defines the Java launching 
     and runtime support. You will require this plug-in if you 
-    need to launch Java virtual machines programmatically.</li>
-  <li><b>org.eclipse.jdt.debug</b> is the plug-in that defines the Java debug 
-    model. You will require this plug-in if you need to programmatically 
-    access objects in a program being debugged.</li>
-  <li><b>org.eclipse.jdt.debug.ui</b> is the plug-in that defines the Java debug 
-    UI extensions. You will require this plug-in if you need 
-    to programmatically access the prompting source locator or Java launch configuration 
-    tabs.</li>
-</ul>
-<p> JDT Debug packages give you access to the launching and debugging
-infrastructure.&nbsp; The JDT Debug packages include:</p>
-<ul>
-  <li><a href="../reference/api/org/eclipse/jdt/debug/core/package-summary.html"><b> 
-    org.eclipse.jdt.debug.core</b></a> supports a Java debug model based on JDI/JDWP 
-    that can be used for controlling a Java program under debug.
-  </li>
-  <li><a href="../reference/api/org/eclipse/jdt/debug/eval/package-summary.html"><b> 
-    org.eclipse.jdt.debug.eval</b></a> provides infrastructure for evaluating
-    Java expressions and reporting results.
-  </li>
-  <li><a href="../reference/api/org/eclipse/jdt/debug/ui/launchConfigurations/package-summary.html"><b> 
-    org.eclipse.jdt.debug.ui.launchConfigurations</b></a> defines the launch
-    configuration tabs for local and remote Java applications.
-  </li>
-  <li><a href="../reference/api/org/eclipse/jdt/launching/package-summary.html"><b> 
-    org.eclipse.jdt.launching </b></a> provides classes for launching Java runtimes 
-    from the platform.&nbsp; <b><a href="../reference/api/org/eclipse/jdt/launching/JavaRuntime.html"> 
-    JavaRuntime</a> </b> implements static methods to access registered VMs and 
+    need to launch Java virtual machines programmatically.&nbsp; The JDT
+    launching is closely tied to the platform launching facility, which is
+    described in <a href="../../org.eclipse.platform.doc.isv/guide/debug_launch.htm">Launching
+    a program</a>.
+    <p>The package <a href="../reference/api/org/eclipse/jdt/launching/package-summary.html"><b>org.eclipse.jdt.launching </b></a> provides classes for launching Java runtimes 
+    from the platform.&nbsp; <b><a href="../reference/api/org/eclipse/jdt/launching/JavaRuntime.html">JavaRuntime</a> </b> implements static methods to access registered VMs and 
     compute runtime classpaths and source lookup paths.&nbsp; A family of VM's 
     (such as the JDK) is represented by the <a href="../reference/api/org/eclipse/jdt/launching/IVMInstallType.html"><b> 
     IVMInstallType</b></a> class. <a href="../reference/api/org/eclipse/jdt/launching/IVMInstall.html"><b> 
@@ -49,15 +27,33 @@ infrastructure.&nbsp; The JDT Debug packages include:</p>
     The <a href="../reference/api/org/eclipse/jdt/launching/IVMRunner.html"><b> 
     IVMRunner</b></a> is used to start a particular Java VM and register its processes 
     with the debug plug-in.
+    <p>The package <a href="../reference/api/org/eclipse/jdt/launching/sourcelookup/package-summary.html"><b>org.eclipse.jdt.launching.sourcelookup </b></a>defines classes for locating
+    source code elements in the file system.<br>
   </li>
-  <li><a href="../reference/api/org/eclipse/jdt/launching/sourcelookup/package-summary.html"><b> 
-    org.eclipse.jdt.launching.sourcelookup </b></a>defines classes for locating
-    source code elements in the file system.
+  <li><b>org.eclipse.jdt.debug</b> is the plug-in that defines the Java debug 
+    model. You will require this plug-in if you need to programmatically 
+    access objects in a program being debugged.&nbsp; The JDT debug model is
+    closely tied to the platform debug model, which is described in <a href="../../org.eclipse.platform.doc.isv/guide/debug_model.htm">Platform
+    debug model</a>.
+    <p>The package <a href="../reference/api/org/eclipse/jdt/debug/core/package-summary.html"><b>org.eclipse.jdt.debug.core</b></a> supports a Java debug model based on
+    JDI/JDWP 
+    that can be used for controlling a Java program under debug.
+    <p>The package <a href="../reference/api/org/eclipse/jdt/debug/eval/package-summary.html"><b>org.eclipse.jdt.debug.eval</b></a> provides infrastructure for evaluating
+    Java expressions and reporting results.<br>
   </li>
-  <li><a href="../reference/api/org/eclipse/jdt/debug/ui/package-summary.html"><b> 
+  <li><b>org.eclipse.jdt.debug.ui</b> is the plug-in that defines the Java debug 
+    UI extensions. Most of the debugger API is provided by the platform debugger
+    infrastructure described in <a href="../../org.eclipse.platform.doc.isv/guide/debug_presentation.htm">Debug
+    model presentation</a> and <a href="../../org.eclipse.platform.doc.isv/guide/debug_ui.htm">Debug
+    UI utility classes</a>.&nbsp; The Java debug UI API focuses on accessing the prompting source locator
+    and Java launch configuration 
+    tabs.&nbsp;&nbsp;
+    <p>The package <a href="../reference/api/org/eclipse/jdt/debug/ui/launchConfigurations/package-summary.html"><b> 
+    org.eclipse.jdt.debug.ui.launchConfigurations</b></a> defines the launch
+    configuration tabs for local and remote Java applications.</p>
+    <p>The package <a href="../reference/api/org/eclipse/jdt/debug/ui/package-summary.html"><b> 
     org.eclipse.jdt.debug.ui</b></a> implements a simple UI for locating source
-    code by prompting the user.
-  </li>
+    code by prompting the user.</li>
 </ul>
 <p><a href="../hglegal2002.htm"><img src="../ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"> 
   </a> </p>
