--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_int_ui.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_int_ui.htm
@@ -17,34 +17,48 @@ packages include:</p>
   <li>
     <p>
     <b><a href="../reference/api/org/eclipse/jdt/ui/package-summary.html"> org.eclipse.jdt.ui</a> 
-    </b>provides support classes for presenting Java elements in the user interface. 
-    The class <a href="../reference/api/org/eclipse/jdt/ui/JavaUI.html"> JavaUI</a> 
+    </b>provides support classes for presenting Java elements in the user interface.
+    Although this package contains many classes, knowledge of just a few classes
+    can get you started:</p>
+    <ul>
+      <li>
+        <p><a href="../reference/api/org/eclipse/jdt/ui/JavaUI.html"><b>JavaUI</b></a> 
     is the main access point to the Java user interface components. It allows 
     you to programmatically open editors on Java elements, open a Java or Java 
     Browsing perspective and open package and type prompter dialogs. The package 
     exposes constants for retrieving Java user interface parts from the workbench 
-    registry and for retrieving preference settings from the Java preferences. 
-    JavaUI gives access to the <a href="../reference/api/org/eclipse/jdt/ui/IWorkingCopyManager.html"> 
-    IWorkingCopyManager</a> . It manages the working copies that are in use for 
+    registry and for retrieving preference settings from the Java preferences.</p>
+      </li>
+      <li>
+        <p> <a href="../reference/api/org/eclipse/jdt/ui/IWorkingCopyManager.html"> 
+    <b>IWorkingCopyManager</b></a> manages the working copies that are in use for 
     Java compilation units.</p>
-	<p>
-    The interfaces <a href="../reference/api/org/eclipse/jdt/ui/ITypeHierarchyViewPart.html"> 
-    ITypeHierarchyViewPart</a> and <a href="../reference/api/org/eclipse/jdt/ui/IPackagesViewPart.html"> 
-    IPackagesViewPart</a> define the programming interface that interacts with 
-    the type hierarchy and packages view parts.
-	</p>
-	<p>
-    The classes <a href="../reference/api/org/eclipse/jdt/ui/StandardJavaElementContentProvider.html"> 
-    StandardJavaElementContentProvider</a> and <a href="../reference/api/org/eclipse/jdt/ui/JavaElementLabelProvider.html"> 
-    JavaElementLabelProvider</a> support the presentation of Java elements in 
+      </li>
+      <li>
+        <p><a href="../reference/api/org/eclipse/jdt/ui/ITypeHierarchyViewPart.html"><b>ITypeHierarchyViewPart</b></a> <b>
+        </b> and <a href="../reference/api/org/eclipse/jdt/ui/IPackagesViewPart.html"> 
+    <b> 
+    IPackagesViewPart</b></a> define the programming interface that interacts with 
+    the type hierarchy and packages view parts.</p>
+      </li>
+      <li>
+        <p><a href="../reference/api/org/eclipse/jdt/ui/StandardJavaElementContentProvider.html"><b> 
+    StandardJavaElementContentProvider</b></a> and <a href="../reference/api/org/eclipse/jdt/ui/JavaElementLabelProvider.html"> 
+    <b> 
+    JavaElementLabelProvider</b></a> support the presentation of Java elements in 
     JFace viewers. <a href="../reference/api/org/eclipse/jdt/ui/JavaElementSorter.html"> 
-    JavaElementSorter</a> can be plugged into a JFace viewer to sort Java elements 
+    <b> 
+    JavaElementSorter</b></a> can be plugged into a JFace viewer to sort Java elements 
     according to the Java UI sorting style.</p>
-    The class <a href="../reference/api/org/eclipse/jdt/ui/JavaElementImageDescriptor.html"> 
-    JavaElementImageDescriptor</a> can be used to create an image based on an 
+      </li>
+      <li>
+        <p><a href="../reference/api/org/eclipse/jdt/ui/JavaElementImageDescriptor.html"><b> 
+    JavaElementImageDescriptor</b></a> can be used to create an image based on an 
     arbitrary base image descriptor and a set of flags specifying which Java specific 
     adornments (e.g. static, final, synchronized, ....) are to be superimposed 
-    on the image.
+    on the image.</p>
+      </li>
+    </ul>
   </li>
   <li><b><a href="../reference/api/org/eclipse/jdt/ui/actions/package-summary.html"> 
     org.eclipse.jdt.ui.actions</a> </b>provides actions and action groups to populate 
@@ -56,30 +70,41 @@ packages include:</p>
   <li><b><a href="../reference/api/org/eclipse/jdt/ui/jarpackager/package-summary.html"> 
     org.eclipse.jdt.ui.jarpackager</a> </b>provides classes and interfaces to 
     generate a JAR file. It offers hooks to extend <a href="../reference/api/org/eclipse/jdt/ui/jarpackager/JarPackageData.html"> 
-    JarPackageData</a> to load and store the JarPackageData and to <a href="../reference/api/org/eclipse/jdt/ui/jarpackager/JarWriter.html"> 
-    write</a> the JAR itself.&nbsp;
+    <b> 
+    JarPackageData</b></a> to load and store the data and to write the JAR
+    itself using a <a href="../reference/api/org/eclipse/jdt/ui/jarpackager/JarWriter.html"><b>JarWriter</b></a>.<br>
   </li>
   <li><b><a href="../reference/api/org/eclipse/jdt/ui/text/package-summary.html"> 
     org.eclipse.jdt.ui.text</a> </b>provides support classes for presenting Java 
-    text. The class <a href="../reference/api/org/eclipse/jdt/ui/text/JavaTextTools.html"> 
-    JavaTextTools</a> provides access to the different scanners to partition and 
-    color Java source code. The class <a href="../reference/api/org/eclipse/jdt/ui/text/JavaSourceViewerConfiguration.html"> 
-    JavaSourceViewerConfiguration</a> defines a standard configuration for a Java 
-    source viewer.
+    text.&nbsp;<br>
+    <ul>
+      <li> <a href="../reference/api/org/eclipse/jdt/ui/text/JavaTextTools.html"> 
+    <b> 
+    JavaTextTools</b></a> provides access to the different scanners to partition and 
+    color Java source code.<br>
+      </li>
+      <li> <a href="../reference/api/org/eclipse/jdt/ui/text/JavaSourceViewerConfiguration.html"> 
+    <b>JavaSourceViewerConfiguration</b></a> defines a standard configuration for a Java 
+    source viewer.<br>
+      </li>
+    </ul>
   </li>
   <li><b><a href="../reference/api/org/eclipse/jdt/ui/text/java/hover/package-summary.html"> 
     org.eclipse.jdt.ui.text.java.hover</a> </b>provides implentations for presenting 
-    text hovers in Java editors. The interface <a href="../reference/api/org/eclipse/jdt/ui/text/java/hover/IJavaEditorTextHover.html"> 
-    IJavaEditorTextHover</a> defines the programming interface for a text hover. 
+    text hovers in Java editors.&nbsp;<br>
+    <br>
+ The interface <a href="../reference/api/org/eclipse/jdt/ui/text/java/hover/IJavaEditorTextHover.html"> 
+    <b> 
+    IJavaEditorTextHover</b></a> defines the programming interface for a text hover. 
     See extension point <a href="../reference/extension-points/org_eclipse_jdt_ui_javaEditorTextHovers.html"> 
-    org.eclipse.jdt.ui.javaEditorTextHovers</a> for instructions on how to define 
-    a new Java text hover.
+    <b> 
+    org.eclipse.jdt.ui.javaEditorTextHovers</b></a> for instructions on how to define 
+    a new Java text hover.<br>
   </li>
   <li><b><a href="../reference/api/org/eclipse/jdt/ui/wizards/package-summary.html"> 
     org.eclipse.jdt.ui.wizards</a> </b>provides wizard pages for creating Java 
     elements. Supported elements are projects, packages, classes and interfaces. 
-    The class&nbsp; <a href="../reference/api/org/eclipse/jdt/ui/wizards/JavaCapabilityConfigurationPage.html"> 
-    JavaCapabilityConfigurationPage</a> supports editing the Java build settings 
+    The class&nbsp;<a href="../reference/api/org/eclipse/jdt/ui/wizards/JavaCapabilityConfigurationPage.html"><b>JavaCapabilityConfigurationPage</b></a> supports editing the Java build settings 
     (source folder setup, referenced projects and, referenced and exported libraries).
   </li>
 </ul>
