--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_run.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_run.htm
@@ -13,7 +13,7 @@
 </head>
  <body>
 <h2> Running a Java program</h2>
-<p> The JDT API includes facilities for launching a Java program using the 
+<p> The JDT Debug component includes facilities for launching a Java program using the 
 VM install that is currently configured by the user for a Java project.&nbsp;&nbsp;</p>
 <h3> Launching a compiled Java program</h3>
 <p> Java programs that have been compiled in a Java project can be run by 
@@ -23,7 +23,25 @@ getting the appropriate <a href="../reference/api/org/eclipse/jdt/launching/IVMR
 snippet shows how the class <b>MyClass</b> inside <b>myJavaProject</b> can
 be launched.</p>
 <font color="#4444cc">
-<pre>   IVMInstall vmInstall = JavaRuntime.getVMInstall(myJavaProject);<br>   if (vmInstall == null)<br>      vmInstall = JavaRuntime.getDefaultVMInstall();<br>   if (vmInstall != null) {<br>      IVMRunner vmRunner = vmInstall.getVMRunner(ILaunchManager.RUN_MODE);<br>      if (vmRunner != null) {<br>         String[] classPath = null;<br>         try {<br>            classPath = JavaRuntime.computeDefaultRuntimeClassPath(myJavaProject);<br>         } catch (CoreException e) { }<br>         if (classPath != null) {<br>            VMRunnerConfiguration vmConfig = <br>               new VMRunnerConfiguration("MyClass", classPath);<br>            ILaunch launch = new Launch(null, ILaunchManager.RUN_MODE, null);<br>            vmRunner.run(vmConfig, launch, null);<br>         }<br>      }<br>   }<br></pre>
+<pre>   IVMInstall vmInstall = JavaRuntime.getVMInstall(myJavaProject);
+   if (vmInstall == null)
+      vmInstall = JavaRuntime.getDefaultVMInstall();
+   if (vmInstall != null) {
+      IVMRunner vmRunner = vmInstall.getVMRunner(ILaunchManager.RUN_MODE);
+      if (vmRunner != null) {
+         String[] classPath = null;
+         try {
+            classPath = JavaRuntime.computeDefaultRuntimeClassPath(myJavaProject);
+         } catch (CoreException e) { }
+         if (classPath != null) {
+            VMRunnerConfiguration vmConfig = 
+               new VMRunnerConfiguration(&quot;MyClass&quot;, classPath);
+            ILaunch launch = new Launch(null, ILaunchManager.RUN_MODE, null);
+            vmRunner.run(vmConfig, launch, null);
+         }
+      }
+   }
+</pre>
 </font>
 <p> Another way to launch a Java program is to create a <b>Java application</b>
   launch configuration, and launch it. The following snippet shows how the 
@@ -31,7 +49,14 @@ class <b>MyClass</b> inside <b> myJavaProject</b> can be launched using a
 simple launch configuration. By default, the resulting running application
  uses the JRE and classpath associated with <b>myJavaProject</b>. </p>
 <font color="#4444cc">
-<pre>   ILaunchManager manager = DebugPlugin.getDefault().getLaunchManager();<br>   ILaunchConfigurationType type = manager.getLaunchConfigurationType(IJavaLaunchConfigurationConstants.ID_JAVA_APPLICATION);<br>   ILaunchConfigurationWorkingCopy wc = type.newInstance(null, "SampleConfig");<br>   wc.setAttribute(IJavaLaunchConfigurationConstants.ATTR_PROJECT_NAME, "myJavaProject");<br>   wc.setAttribute(IJavaLaunchConfigurationConstants.ATTR_MAIN_TYPE_NAME, "myClass");<br>   ILaunchConfiguration config = wc.doSave();	<br>   config.launch(ILaunchManager.RUN_MODE, null);<br></pre>
+<pre>   ILaunchManager manager = DebugPlugin.getDefault().getLaunchManager();
+   ILaunchConfigurationType type = manager.getLaunchConfigurationType(IJavaLaunchConfigurationConstants.ID_JAVA_APPLICATION);
+   ILaunchConfigurationWorkingCopy wc = type.newInstance(null, &quot;SampleConfig&quot;);
+   wc.setAttribute(IJavaLaunchConfigurationConstants.ATTR_PROJECT_NAME, &quot;myJavaProject&quot;);
+   wc.setAttribute(IJavaLaunchConfigurationConstants.ATTR_MAIN_TYPE_NAME, &quot;myClass&quot;);
+   ILaunchConfiguration config = wc.doSave();	
+   config.launch(ILaunchManager.RUN_MODE, null);
+</pre>
 </font>
 <p><a href="../hglegal2002.htm"><img border="0" src="../ngibmcpy2002.gif"  alt="Copyright IBM Corporation and others 2000, 2002. All Rights Reserved.">
 </a>
