--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_new_wizard_page.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_new_wizard_page.htm
@@ -8,14 +8,15 @@
 <link rel="stylesheet" type="text/css" href="../book.css">
 </head>
 <body>
-<h2>How to create a customized 'new Java element' wizard page</h2>
-<p> The <a href="../reference/api/org/eclipse/jdt/ui/wizards/package-summary.html">org.eclipse.jdt.ui.wizards</a> 
-  package provides wizard pages for creating Java elements. Besides using the 
-  prefabricated pages clients have the ability to subclass the wizard pages to 
-  add their own input fields or to influence the code generation. Below is a sample 
+<h2>Creating a new Java element wizard page</h2>
+<p> The <a href="../reference/api/org/eclipse/jdt/ui/wizards/package-summary.html"><b>org.eclipse.jdt.ui.wizards</b></a> 
+  package provides wizard pages for creating Java elements. Besides using 
+  prefabricated pages, you can subclass the wizard pages to 
+  add your own input fields or to influence the code generation.&nbsp;</p>
+<p> Below is a sample 
   of a new type wizard page that is customized to create JUnit test case classes. 
   The page initializes the super class field with &quot;junit.framework.TestCase&quot; 
-  and adds a checkbox that controls whether method stubs for the setUp() and tearDown() 
+  and adds a checkbox that controls whether method stubs for the <code>setUp()</code> and <code>tearDown()</code>
   method are to be created.</p>
 <pre><font color="#4444CC">public class TestCaseWizardPage extends NewTypeWizardPage {
     private Button fCreateStubs;
