--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_open_editor.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_open_editor.htm
@@ -8,10 +8,9 @@
 <link rel="stylesheet" type="text/css" href="../book.css">
 </head>
 <body>
-<h2>Opening a Java editor</h2>
-<p>The <b><a href="../reference/api/org/eclipse/jdt/ui/JavaUI.html"> 
-  JavaUI</a></b> class contains many utility methods that allow you to programmatically invoke the JDT user interface.</p>
-<p>The following snippet causes a Java editor to show a specific member of a 
+<h3>Opening a Java editor</h3>
+<p>The following snippet shows how <b><a href="../reference/api/org/eclipse/jdt/ui/JavaUI.html"> 
+  JavaUI</a></b> can be used to open a Java editor and display a specific member of a 
   Java compilation unit.</p>
 <pre><font color="#4444cc">    void showMethod(IMember member) {
         ICompilationUnit cu = member.getCompilationUnit();
