--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_prompter.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_prompter.htm
@@ -9,16 +9,15 @@
 </head>
 <body>
 <h2>Creating Java specific prompter dialogs</h2>
-<p> The JDT UI plug-in provides the utility class <b><a href="../reference/api/org/eclipse/jdt/ui/JavaUI.html">JavaUI</a></b>, 
-  which allows you to programmatically invoke the JDT user interface.</p>
-<p> The following snippet causes a type prompter dialog to open:</p>
+<p> The following snippet uses <b><a href="../reference/api/org/eclipse/jdt/ui/JavaUI.html">JavaUI</a>
+</b>to open a type prompter dialog:</p>
 <pre><font color="#4444cc">    public IType selectType() throws JavaModelException {
         SelectionDialog dialog= JavaUI.createTypeDialog(
             parent, new ProgressMonitorDialog(parent),
             SearchEngine.createWorkspaceScope(),
             IJavaElementSearchConstants.CONSIDER_TYPES, false);
-        dialog.setTitle("My Dialog Title");
-        dialog.setMessage("My Dialog Message");
+        dialog.setTitle(&quot;My Dialog Title&quot;);
+        dialog.setMessage(&quot;My Dialog Message&quot;);
         if (dialog.open() == IDialogConstants.CANCEL_ID)
             return null;
 
@@ -28,9 +27,8 @@
         return (IType)types[0];
     }</font></pre>
 <p>
-In addition to methods for creating a &nbsp;type prompter dialog the class <a href="../reference/api/org/eclipse/jdt/ui/JavaUI.html"> 
-JavaUI</a> provides additional methods for creating package and main type prompter 
-dialogs as well.
+<a href="../reference/api/org/eclipse/jdt/ui/JavaUI.html"><b>JavaUI</b></a> provides additional methods for creating package and main type prompter 
+dialogs.
 </p>
 <p><a href="../hglegal2002.htm"><img border="0" src="../ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002. All Rights Reserved."> 
   </a> </p>
