--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_write_jar_file.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_write_jar_file.htm
@@ -10,14 +10,15 @@
 <body>
 <h2>Programmatically writing a Jar file</h2>
 <p> The <a href="../reference/api/org/eclipse/jdt/ui/jarpackager/package-summary.html"> 
-  org.eclipse.ui.jarpackager</a> package provides utility classes to programmatically 
+  <b> 
+  org.eclipse.ui.jarpackager</b></a> package provides utility classes to programmatically 
   export files to a Jar file. Below is a code snippet that outlines the use of 
-  the <a href="../reference/api/org/eclipse/jdt/ui/jarpackager/JarPackageData.html">JarPackageData</a> 
+  the <a href="../reference/api/org/eclipse/jdt/ui/jarpackager/JarPackageData.html"><b>JarPackageData</b></a> 
   class:</p>
 <pre><font color="#4444cc">    void createJar(IType mainType, IFile[] filestoExport) {
         Shell parentShell= ...;
         JarPackageData description= new JarPackageData();
-        IPath location= new Path("C:/tmp/myjar.jar");
+        IPath location= new Path(&quot;C:/tmp/myjar.jar&quot;);
         description.setJarLocation(location);
         description.setSaveManifest(true);
         description.setManifestMainClass(mainType);
@@ -31,9 +32,10 @@
             // operation has been canceled.
         }
     }</font></pre>
-<p> Additional API is provided to create a plug-in specific subclass of JarPackageData. 
+<p> Additional API is provided to create a plug-in specific subclass of <a href="../reference/api/org/eclipse/jdt/ui/jarpackager/JarPackageData.html"><b>JarPackageData</b></a>. 
   This allows other plug-ins to implement their own Jar export/import wizards 
-  and to save the content of the JarPackageData object to a corresponding Jar 
+  and to save the content of the <a href="../reference/api/org/eclipse/jdt/ui/jarpackager/JarPackageData.html"><b>JarPackageData</b></a>
+object to a corresponding Jar 
   description file.</p>
 <p><a href="../hglegal2002.htm"><img border="0" src="../ngibmcpy2002.gif"  alt="Copyright IBM Corporation and others 2000, 2002. All Rights Reserved."> 
   </a> </p>
